--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -33,10 +33,13 @@ a
   width: 33%
 
 #container
-  font-family: 'Allerta', sans-serif
+  font-family: Helvetical, Arial, sans-serif
   font-size: 1.5em
-  width: 70%
+  width: 90%
   margin: 0 auto
+
+  a, h1, h2, h3
+    font-family: 'Allerta', sans-serif
 
   input, textarea
     margin-right: 10px
@@ -54,7 +57,8 @@ a
   .button, input[type='submit']
     font-size: 1em
     padding: 20px
-    background: #356094
+    background: #652f93
+    font-weight: bold
     border-radius: 5px
     border: solid 1px #2A4E77
     text-decoration: none
@@ -65,7 +69,7 @@ a
 
   textarea
     height: 100px
-    width: 75%
+    width: 750px
 
   .required
     abbr
@@ -73,3 +77,10 @@ a
 
   label
     display: block
+
+  .date
+    color: #652f93
+    font-weight: bold
+
+  .lead
+    font-size: 1.3em
