--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -2,3 +2,17 @@
 .right
   =link_to "Become a member", new_members_path
 
+%section
+
+%h2
+  Our Goal
+
+%p.lead
+  Making tech more diverse and welcoming by bringing people together and helping teach programming skills. We organize free session in HTML, CSS, Javascript and Ruby, targeted at different groups of people that are underrepresented in the tech industry and with help from our amazing coaches are able to offer close help and mentoring.
+
+%section
+  %h3 Upcoming meetings
+
+  - @sessions.each do |session|
+    = session.title
+    %small.date= l(session.date_and_time)
