--- a/app/views/invitation_mailer/invite.html.erb
+++ b/app/views/invitation_mailer/invite.html.erb
@@ -8,17 +8,17 @@
     <div style="width: 100%; font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif">
       <div style="width: 100%; height: 6px; background-color: #2c173a; border-bottom: 2px solid #b9b1bf;"></div>
       <div style="width: 100%; height: 40px; background-color: #f6f4f8;"></div>
-      <div style="margin:auto; width:200px; height:77px; margin-top: -35px;"><img src="logo.png" width="200px" height="77px"></div>
+      <div style="margin:auto; width:200px; height:77px; margin-top: -35px;"><%= image_tag(attachments['logo.png'].url, width: "200px", height: "77px") %></div>
 
       <div style="width: 60%; height: 100%; border-radius:5px; padding: 20px 40px; margin: 20px auto; border: 1px solid #ececec">
-        <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi Natalie</h2>
+        <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
         <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #3e4248">We are back from our time off and are ready to rock!</h3>
         <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 30px;">We will be making some changes to the way we have been running our sessions to make them better and more interesting.</p>
 
         <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #111111">Introducing a completely new format</h3>
         <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">The main focus will be on understanding different elements of web development.<br> You will be able to work in pairs, on group projects or on your own.<br> And of course, get help and guidance from our <b>superstar coaches</b>.</p>
 
-        <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #3e4248">The next session:</h3>
+        <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #3e4248">The next session</h3>
 
         <div>
           <div style="float: left; min-width:430px;">
@@ -37,7 +37,7 @@
             <p style="color: #434950;font-size: 17px;font-weight: 400;">Friars Bridge Court <br>
             41-45 Blackfriars Road <br>
             London, SE1 8NZ<br></p>
-            <div style="width:120px; height:20px; margin-top: 33px;"><img src="reevoo.jpg" width="120px" height="20px"></div>
+            <div style="width:120px; height:20px; margin-top: 33px;"><%=image_tag(attachments["reevoo.jpg"].url, width: "120px", height: "20px") %></div>
           </div>
 
         </div>
