link invitation acceptance to email

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -84,3 +84,12 @@ a
 
   .lead
     font-size: 1.3em
+
+  .alert
+    text-align: center
+
+  .messages
+    margin-top: 20px
+
+  #flash_notice
+    color: green
