--- a/app/views/invitation_mailer/invite.html.erb
+++ b/app/views/invitation_mailer/invite.html.erb
@@ -6,11 +6,12 @@
   </head>
   <body style="margin: 0; padding: 0">
     <div style="width: 100%; font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif">
-      <div style="width: 100%; height: 6px; background-color: #2c173a; border-bottom: 2px solid #b9b1bf;"></div>
-      <div style="width: 100%; height: 40px; background-color: #f6f4f8;"></div>
-      <div style="margin:auto; width:200px; height:77px; margin-top: -35px;"><%= image_tag(attachments['logo.png'].url, width: "200px", height: "77px") %></div>
-
-      <div style="width: 60%; height: 140%; border-radius:5px; padding: 20px 40px; margin: 20px auto; border: 1px solid #ececec">
+      <div style="width: 100%; height: 10px; background-color: #2c173a; border-bottom: 2px solid #b9b1bf;">
+        <div style="margin:auto; width:200px; height:77px; margin-top: 20px; padding-top: 20px;"><%= image_tag(attachments['logo.png'].url, width: "200px", height: "77px") %></div>
+      </div>
+      <div style="width: 100%; height: 40px; background-color: #f6f4f8;">
+      </div>
+      <div style="width: 70%; border-radius:5px; padding: 20px 40px; margin: 70px auto 40px; border: 1px solid #ececec">
         <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
         <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #3e4248">We are back from our time off and are ready to rock!</h3>
         <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 30px;">We will be making some changes to the way we have been running our sessions to make them better and more interesting.</p>
@@ -20,18 +21,18 @@
 
         <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #3e4248">The next session</h3>
 
-        <div>
-          <div style="float: left; min-width:430px;">
+        <div style="display:inline-block">
+          <div style="min-width:340px; padding-right: 50px; display: inline-block;">
             <h2 style="color: #2d183d; font-size: 27px; font-weight: 500;letter-spacing: 0.03em; margin-bottom: 0;">HTML by Codebar</h2>
             <p style="font-size: 16px; font-weight: 300; margin-top: 7px;">on <b style="color: #555555;font-size: 16px; font-weight: 600; margin-top: 0;">Wed, 23 October at 18:30</b></p>
-            <div style="background-color: #F7F7F7;width: 70%; border-radius: 6px; box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset; font-size: 18px; padding: 5px 14px; text-align: center; margin: 31px 0 25px; border: 1px solid #dddddd;">
+            <div style="background-color: #F7F7F7; width: 90%; border-radius: 6px; box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset; font-size: 18px; padding: 5px 14px; text-align: center; margin: 31px 0 25px; border: 1px solid #dddddd;">
               <p> <%= link_to "I want to attend", full_url_for(accept_invitation_url(@invitation)), style: "text-decoration:none; color: #663095; font-size: 25px; font-weight: 600; letter-spacing: 0.02em; margin: 10px; text-decoration: none; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);"%></p>
             </div>
             <p style="color: #555555; font-size: 13px; font-weight: 600; margin-top: 6px;">Please confirm your attendance as we have limited space.</p>
           </div>
 
 
-          <div style="float: left; min-width:150px; border-left: 1px solid #ececec; padding-left: 50px;">
+          <div style="min-width:150px; border-left: 1px solid #ececec; padding-left: 50px; display: inline-block;">
             <h3 style="color: #434950; font-size: 17px;font-weight: 600;letter-spacing: 0.02em;">Location:</h3>
             <h2 style="color: #2D183D; font-weight: 400; ">Reevoo</h2>
             <p style="color: #434950;font-size: 17px;font-weight: 400;">Friars Bridge Court <br>
