--- a/app/views/invitation_mailer/invite.html.erb
+++ b/app/views/invitation_mailer/invite.html.erb
@@ -49,8 +49,7 @@
         <div style="color: #111111; font-size: 15px; font-weight: 300; margin-top: 60px;">Despo & Maria</div>
         <div style="color: #111111; font-size: 16px; font-weight: 600; margin-top: 5px;">Codebar</div>
 
-
-        <p style="color: #6d6a6a; font-size: 13px; font-weight: 600; margin-top: 90px;">If you dont want to receive these emails <a style="color: #a369d5; text-decoration: underline">unsubscribe</a>.</p>
+        <p style="color: #6d6a6a; font-size: 13px; font-weight: 600; margin-top: 90px;">If you dont want to receive these emails <%= link_to "unsubscribe", full_url_for(unsubscribe_member_url(@member)), style: "color: #a369d5; text-decoration: underline" %></p>
       </div>
       <div style="width: 100%; height: 40px; background-color: #f6f4f8;"></div>
     </div>
