--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -1,3 +1,7 @@
+body
+  margin: 0
+  padding: 0
+
 a
   margin: 0
   padding: 0
@@ -7,8 +11,45 @@ a
   vertical-align: baseline
   text-decoration: none
 
+
+.rightside
+  width: 30%
+  background-color: #fff
+  float: right
+  margin-top: 50px
+
+
 .right
-  text-align: right
+  border: 1px solid #DDDDDD
+  border-radius: 6px
+  box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset
+  font-size: 23px
+  font-weight: 400
+  padding: 10px 14px
+  text-align: center
+  width: 250px
+  
+.siteunder
+  font-size: 18px
+  margin-top: 140px
+  color: #555555
+  margin-left: 20px
+
+.logo
+  width: 180px
+  margin: auto
+  margin-top: -30px
+
+#top
+  width: 100%
+  height: 6px
+  background-color: #2c173a
+  border-bottom: 2px solid #b9b1bf
+#navlight
+  height: 40px
+  background-color: #f6f4f8
+  width: 100%
+
 
 .form-footer
   border-top: 1px solid #e4eae9
@@ -33,13 +74,18 @@ a
   width: 33%
 
 #container
-  font-family: Helvetical, Arial, sans-serif
+  font-family: proxima-nova, Helvetical, Arial, sans-serif
   font-size: 1.5em
-  width: 90%
+  width: 80%
   margin: 0 auto
 
-  a, h1, h2, h3
-    font-family: 'Allerta', sans-serif
+  a, h1, h3
+
+  h2
+    color: #2D183D
+    font-size: 1.6em
+    font-weight: 400
+    width: 60%
 
   input, textarea
     margin-right: 10px
@@ -83,7 +129,8 @@ a
     font-weight: bold
 
   .lead
-    font-size: 1.3em
+    font-size: 20px
+    width: 60%
 
   .alert
     text-align: center
@@ -93,3 +140,5 @@ a
 
   #flash_notice
     color: green
+
+
