--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -1,6 +1,8 @@
 body
   margin: 0
   padding: 0
+  font-family: proxima-nova, Helvetical, Arial, sans-serif
+  min-width: 360px
 
 a
   margin: 0
@@ -10,25 +12,22 @@ a
   font: inherit
   vertical-align: baseline
   text-decoration: none
+  color: #652f93
 
+.right-panel, .left-panel
+  display: inline-block
 
-.rightside
-  width: 30%
+.left-panel
+  width: 60%
+  padding-right: 30px
+
+.right-panel
+  margin-top: 45px
+  vertical-align: top
+  min-width: 30%
   background-color: #fff
-  float: right
-  margin-top: 50px
+  text-align: right
 
-
-.right
-  border: 1px solid #DDDDDD
-  border-radius: 6px
-  box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset
-  font-size: 23px
-  font-weight: 400
-  padding: 10px 14px
-  text-align: center
-  width: 250px
-  
 .siteunder
   font-size: 18px
   margin-top: 140px
@@ -45,11 +44,11 @@ a
   height: 6px
   background-color: #2c173a
   border-bottom: 2px solid #b9b1bf
+
 #navlight
   height: 40px
   background-color: #f6f4f8
   width: 100%
-
 
 .form-footer
   border-top: 1px solid #e4eae9
@@ -73,19 +72,25 @@ a
 .third
   width: 33%
 
+
+footer
+  margin: 30px auto
+  text-align: center
+
+
+
 #container
-  font-family: proxima-nova, Helvetical, Arial, sans-serif
-  font-size: 1.5em
+  font-size: 1.4em
   width: 80%
   margin: 0 auto
+  min-height: 500px
 
-  a, h1, h3
+  h1, h3, h2
+    color: #2D183D
+    font-weight: 400
 
   h2
-    color: #2D183D
     font-size: 1.6em
-    font-weight: 400
-    width: 60%
 
   input, textarea
     margin-right: 10px
@@ -100,18 +105,25 @@ a
     background-color: #e4eae9
     font-size: 1em
 
-  .button, input[type='submit']
-    font-size: 1em
-    padding: 20px
-    background: #652f93
-    font-weight: bold
-    border-radius: 5px
-    border: solid 1px #2A4E77
-    text-decoration: none
-    transition-duration: 0.2s
+  .btn, .button, input[type='submit']
+    border: 1px solid #DDDDDD
+    border-radius: 6px
+    box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset
+    font-size: 23px
+    font-weight: 400
+    padding: 10px 45px
+    text-align: center
+    min-width: 350px
 
     &:hover
-      box-shadow: 3px 3px 3px gray
+      box-shadow: 1px 2px 2px  #652f93
+
+  .button, input[type='submit']
+    background-color: white
+    text-decoration: none
+    transition-duration: 0.2s
+    color: #652f93
+
 
   textarea
     height: 100px
@@ -130,7 +142,6 @@ a
 
   .lead
     font-size: 20px
-    width: 60%
 
   .alert
     text-align: center
@@ -141,4 +152,12 @@ a
   #flash_notice
     color: green
 
+  section#main
+    display: inline-block
 
+@media(max-width: 900px)
+  .left-panel, .right-panel
+    width: 100%
+
+  .right-panel
+    text-align: center
