add code of conduct, to be reviewed

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -4,8 +4,13 @@
       Our Goal
 
     %p.lead
-      Making tech more diverse and welcoming by bringing people together and helping teach programming skills. We organize free sessions in HTML, CSS, Javascript and Ruby, targeted at different groups of people that are underrepresented in the tech industry and with help from our amazing coaches are able to offer close help and mentoring.
+      Making tech more diverse and welcoming by bringing people together and helping teach programming skills. We organize free sessions in HTML, CSS, Javascript and Ruby, targeted at different groups of people that are underrepresented in the tech industry. All these, with the help of our <b>amazing</b> coaches!
 
+    %h3
+      Code of conduct
+    %p.lead
+      Our events are dedicated to providing a harassment-free experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of our members or coaches in any form. Sexual language and imagery is not appropriate for any of our events, including talks, workshops, parties, Twitter and any other online media. Members violating these rules may be sanctioned or expelled from the event and any future events at the discretion of the organisers.
+      = link_to  "read the full version", code_of_conduct_path
   .right-panel
     =link_to "Become a member", new_members_path, class: 'btn'
 
