limit allowed number of attendees improve displayed messages

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -143,14 +143,16 @@ footer
   .lead
     font-size: 20px
 
-  .alert
-    text-align: center
-
   .messages
     margin-top: 20px
 
+  .messages
+    padding: 0 100px
+
   #flash_notice
-    color: green
+    padding: 10px
+    font-size: 0.9em
+    background-color: #f6f4f8
 
   section#main
     display: inline-block
