add roles to member

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -15,5 +15,7 @@
 
     = f.input :about_you, as: :text, label: "Tell us a little bit about yourself"
 
+    = f.association :roles, as: :check_boxes
+
     .form-footer
       = f.submit "Join #{t("brand")}"
