fix spelling mistake

--- a/app/views/invitation_mailer/invite.html.erb
+++ b/app/views/invitation_mailer/invite.html.erb
@@ -15,7 +15,7 @@
         <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
 
         <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #111111">We would like to invite you to the next <b>codebar</b> session</h3>
-        <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;"> There, you will be able to go through HTML/CSS, Javascript and Ruby tutorials with help and guidance from our <b>superstar coaches</b>. You will also get the opportunity to meet other people interested in coding and pair with them.<br></p>
+        <p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;"> In our sessions, you will be able to go through HTML/CSS, Javascript and Ruby tutorials with help and guidance from our <b>superstar coaches</b>. You will also get the opportunity to meet other people interested in coding and pair with them.<br></p>
 
         <div style="display:inline-block">
           <div style="width:340px; padding-right: 50px; display: inline-block;">
