--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -13,6 +13,7 @@
       = link_to  "read the full version", code_of_conduct_path
   .right-panel
     =link_to "Become a member", new_members_path, class: 'btn'
+    =link_to "Courses", courses_path, class: 'btn'
 
 
 /- if @sessions.any?
