--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -110,10 +110,12 @@ footer
     border-radius: 6px
     box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset
     font-size: 23px
+    display: block
     font-weight: 400
     padding: 10px 45px
     text-align: center
-    min-width: 350px
+    min-width: 100px
+    margin-bottom: 20px
 
     &:hover
       box-shadow: 1px 2px 2px  #652f93
@@ -157,9 +159,28 @@ footer
   section#main
     display: inline-block
 
+.right
+  text-align: right
+
+
+.tutor
+  .avatar, .about
+    display: inline-block
+    vertical-align: top
+
+  .avatar
+    margin-right: 20px
+
+    img
+      border-radius: 30px
+
+  .about
+    width: 500px
+
 @media(max-width: 900px)
   .left-panel, .right-panel
     width: 100%
 
   .right-panel
     text-align: center
+
