tweaks, link to twitter, allow for html

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -164,6 +164,7 @@ footer
 
 
 .tutor
+  margin-top: 50px
   .avatar, .about
     display: inline-block
     vertical-align: top
@@ -175,7 +176,7 @@ footer
       border-radius: 30px
 
   .about
-    width: 500px
+    max-width: 500px
 
 @media(max-width: 900px)
   .left-panel, .right-panel
@@ -183,4 +184,3 @@ footer
 
   .right-panel
     text-align: center
-
